--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 
 /* Body Background */
 body {
-    background-image: linear-gradient(to right, #6a11cb, #2575fc);
+    background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     color: #fff;
     text-align: center;
     scroll-behavior: smooth;
@@ -17,7 +18,6 @@ body {
 /* Header */
 .header {
     padding: 100px 0;
-    background: rgba(0, 0, 0, 0.7);
     animation: fadeIn 2s ease-in-out;
 }
 
